fix on load map

--- a/public/activities.html
+++ b/public/activities.html
@@ -191,7 +191,7 @@
           <div class="row">
             <div class="col-md-6"></div>
             <div id="table-filter" class="col-md-6">
-              <table>
+              <!--! <table>
                 <tr>
                   <td>
                     เรียงตาม&nbsp;&nbsp;
@@ -207,7 +207,7 @@
                     </div>
                   </td>
                 </tr>
-              </table>
+              </table> -->
             </div>
 
           </div>
