--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,14 @@
   <link rel="stylesheet" href="admin-lte/plugins/summernote/summernote-bs4.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Sarabun&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sarabun&display=swap" rel="stylesheet">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
   <!-- PROPLANTE -->
   <link rel="stylesheet" href="css/allelements.css">
   <link rel="stylesheet" href="css/MainPage.css">
+  <link rel="stylesheet" href="css/pieChartStyle.css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
@@ -227,7 +229,7 @@
 
     <!--! LOADING MODAL -->
     <div class="modal" id="modal-loading" data-keyboard="false" data-backdrop="static"
-      style="display: none; top:0 ;background: #ffffff" aria-hidden="true">
+      style="display: block; top:0 ;background: #ffffff" aria-hidden="true">
       <div class="modal-dialog" style="margin-top:30vh ;">
         <div id="bg-loading" style="display:block;width:100%; height:100%">
           <div class="loader-wrapper">
@@ -287,6 +289,8 @@
     <script src="js/showLandMain.js"></script>
     <script src="js/mainPageFunc.js"></script>
     <script src="js/CalculatedMapArea.js"></script>
+    <!-- <script src="js/customMarker.js"></script> -->
+
     <!-- PROPLANTE -->
 
 </body>
