--- a/public/calendar.html
+++ b/public/calendar.html
@@ -193,6 +193,17 @@
       <section class="content">
         <div class="container-fluid">
           <div class="row">
+            <div class="col-md-11" style="margin: auto; text-align: center; margin-bottom: 5vh;">
+              <div class="dropdown" id="dropdown-main">
+            <button id="calendar-filter" class="btn btn-secondary dropdown-toggle land-filter" data-toggle="dropdown"
+              aria-expanded="false" style="width: 80%;">
+              -- ที่ดิน --
+            </button>
+            <div class="dropdown-menu" role="menu" id="calendar-dropdown">
+
+            </div>
+          </div>
+            </div>
             <div class="col-md-11" style="margin:auto">
               <div class="card card-primary">
                 <div class="card-body p-50">
@@ -203,7 +214,7 @@
               </div>
               <!-- /.card -->
             </div>
-            <div class="col-md-11" style="margin:auto">
+            <div class="col-md-11" style="margin:auto; display: none;">
               <div class="card" id="activities-browser">
                 <div class="card-header">
                   <p class="card-title">รายละเอียด</p>
@@ -249,18 +260,20 @@
       </section>
       <!-- /.content -->
     </div>
-    <!-- /.content-wrapper -->
 
-
-
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-      <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
   </div>
   <!-- ./wrapper -->
-
+ <!--! LOADING MODAL -->
+ <div class="modal" id="modal-loading" style="display: none; top:0 ;background: #ffffff" aria-hidden="true">
+  <div class="modal-dialog" style="margin-top:30vh ;">
+    <div id="bg-loading" style="display:block;width:100%; height:100%">
+      <div class="loader-wrapper">
+        <div id="loader"></div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--! LOADING MODAL -->
   <!-- jQuery -->
   <script src="admin-lte/plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap -->
