--- a/public/login.html
+++ b/public/login.html
@@ -95,7 +95,7 @@
               </div>
               <!-- /.col -->
               <div class="col-6">
-                <button type="button" class="btn btn-primary btn-block" id="owner-login-bt">เข้าสู่ระบบ</button>
+                <button type="button" class="btn btn-primary btn-block" id="owner-login-bt" style="float: right;">เข้าสู่ระบบ</button>
               </div>
               <!-- /.col -->
             </div>
@@ -135,8 +135,8 @@
                   <a id="manager-regis-bt" href="register.html">ลงทะเบียน</a>
                 </p>
               </div>
-              <div class="col-6">
-                <button type="button" class="btn btn-primary btn-block" id="manager-login-bt">เข้าสู่ระบบ</button>
+              <div class="col-6" >
+                <button type="button" class="btn btn-primary btn-block" id="manager-login-bt" style="float: right;">เข้าสู่ระบบ</button>
               </div>
             </div>
           </form>
@@ -170,7 +170,7 @@
   <!-- /.login-box -->
 
    <!--! LOADING MODAL -->
-   <div class="modal" id="modal-loading" data-keyboard="false" data-backdrop="static" style="display: none; top:0 ;background: #ffffff" aria-hidden="true">
+   <div class="modal" id="modal-loading" data-keyboard="false" data-backdrop="static" style="display: block; top:0 ;background: #ffffff" aria-hidden="true">
     <div class="modal-dialog" style="margin-top:30vh ;">
       <div id="bg-loading" style="display:block;width:100%; height:100%">
         <div class="loader-wrapper">
